corpus/cpp/constexpr/case-01/snapshots/gcc13_14/native_text_capture/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [constexpr] static assertion failed: int size mismatch
    1 | static_assert(sizeof(int) == 1, "int size mismatch");
      |               ~~~~~~~~~~~~^~~~
raw : src/main.cpp:1:27: error: static assertion failed: int size mismatch @ src/main.cpp:1:27
| src/main.cpp:1:27
| static_assert(sizeof(int) == 1, "int size mismatch");
|                           ^
note: src/main.cpp:1:27: note: the comparison reduces to ‘(4 == 1)’